# evo-hidden

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: extract_layer10.py  layer_sweep.py
src/evo_hidden/: __init__.py  engine.py  layers.py  model.py
tests/: test_api.py
